web/src/styles/Ticket.scss
@import "constants";

$tag-spacing: 5px;

.attachment {
  display: block;
}

.bordered {
  border: $juicy-border;
  border-radius: $juicy-radius;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.container {
  display: flex;
  flex-direction: column;
  position: relative;
}

.content {
  display: grid;
  grid-gap: $juicy-length;
  overflow-y: auto;
  padding: 2 * $juicy-length;
  word-break: break-word;
}

.invisible {
  visibility: hidden;
}

.label {
  font-size: 15px;
  font-weight: 700;
}

.loading-container {
  display: inline-block;
  position: relative;
}

.section {
  // Workaround for horizontal overflow of the JiraIssues component.
  max-width: 350px;
}

.tag {
  margin: $tag-spacing / 2;
}

.tags {
  display: flex;
  flex-wrap: wrap;
  margin: -($tag-spacing / 2);
}

